chore(docs): update wording and formatting

--- a/docs/repetitorium/part two/Objektorientierter Entwurf/klassen im entwurf.tex
+++ b/docs/repetitorium/part two/Objektorientierter Entwurf/klassen im entwurf.tex
@@ -3,7 +3,7 @@
 Im Unterschied zu den Entwürfen aus der Analyse  beschreiben Klassen des Entwurfs nicht fachliche Zusammenhänge, sondern Klassen, die in der gewählten objektorientierten Sprache umgesetzt werden.\\
 
 \noindent
-Damit besitzen die Klassen des Entwurfs \textbf{technische Verantwortichkeiten}, wie
+Damit besitzen die Klassen des Entwurfs \textbf{technische Verantwortlichkeiten}, wie
 
 \begin{itemize}
     \item Datenhaltung (\textit{Entity})
