chore(docs): update wording and formatting

--- a/docs/repetitorium/part two/Objektorientierter Entwurf/strukturen und verhalten.tex
+++ b/docs/repetitorium/part two/Objektorientierter Entwurf/strukturen und verhalten.tex
@@ -6,12 +6,13 @@ Statische Modelle werden durch \textbf{Paket-} und \textbf{Klassendiagramme} bes
 \textit{Paketdiagramme} werden auch zur Dokumentation der Architektur genutzt.
 }.\\
 
+\noindent
 Dynamische Modelle werden durch \textbf{Zustands-} und \textbf{Sequenzdiagramme} beschrieben\footnote{
-\textit{Wedemann} weist darauf hin, dass auch \textit{Aktivitätsdiagramme} eingesetzt werden, Praktiker die \textit{Sequenzdiagramme} im Entwurf aber für sinnvoller halten (vgl.\cite[49]{Wed09b}).
+\textit{Wedemann} weist darauf hin, dass auch \textit{Aktivitätsdiagramme} eingesetzt werden, allerdings \textit{Sequenzdiagramme} im Entwurf von Praktikern für sinnvoller erachtet werden (vgl.\cite[49]{Wed09b}).
 }.\\
 
 \noindent
-\textbf{Klassendiagramme} werden wie in der Analyse eingesetzt, allerdings kommen im Entwurf technische Details dazu, wie die \textit{Sichtbarkeiten}, die \textit{Typen} von Attributen, Rückgabewerten und formaler Parameter.\\
+\textbf{Klassendiagramme} werden wie in der Analyse eingesetzt, allerdings kommen im Entwurf technische Details dazu, wie die \textit{Sichtbarkeiten}, die \textit{Typen} von Attributen, Rückgabewerten und formalen Parametern.\\
 Es empfiehlt sich, Gerüstmethoden wie \textit{Getter}/\textit{Setter} sowie Konstruktoren der Übersicht halber wegzulassen (s. \cite[50]{Wed09b}).\\
 
 \noindent
