chore(docs): update wording and formatting

--- a/docs/repetitorium/part two/Objektorientierter Entwurf/verbesserung des entwurfs durch refactoring.tex
+++ b/docs/repetitorium/part two/Objektorientierter Entwurf/verbesserung des entwurfs durch refactoring.tex
@@ -7,7 +7,7 @@ Sollten sich ansonsten kleine und große Fehler im Entwurf anhäufen, können di
 
 \noindent
 Es ist allerdings nicht einfach, bereits kleine Mengen existierenden Codes zu ändern.\\
-Den Entwurf bestehender Software zu verbessern, ohne dabei die Funktionalität zu ändern, beschreibt \textit{Fowler} in \cite{Fow99}.
+Mittel und Wege, den Entwurf bestehender Software zu verbessern, ohne dabei die Funktionalität zu ändern, werden von \textit{Fowler} in \cite{Fow99} gezeigt: \textbf{Refactoring}.
 
 \subsubsection*{Vorgehen}
 Refactoring besteht aus mehreren Schritten:
@@ -20,7 +20,7 @@ Refactoring besteht aus mehreren Schritten:
 
 \subsubsection*{Refactoring verursacht Aufwand}
 Mit Refactoring kann man die Qualität von Code verbessern.
-Allerdings zeigt die Praxis, dass fast jeder code kleinere oder größere Probleme hat, die immer weiter verbessert werden können.
+Allerdings zeigt die Praxis, dass fast jeder Code kleinere oder größere Probleme hat, die immer weiter verbessert werden können.
 Teilweise sind Refactorings mit hohem Aufwand verbunden, wobei nur Qualität, aber nicht Funktionalität verbessert wird.\\
 Es sollte deshalb stehts zwischen Dringlichkeit, Aufwand und Auswirkungen abgewogen werden.
 
