chore(docs): update wording and formatting

--- a/docs/repetitorium/part two/Objektorientierter Entwurf/zusammenfassung.tex
+++ b/docs/repetitorium/part two/Objektorientierter Entwurf/zusammenfassung.tex
@@ -4,13 +4,13 @@
 \begin{itemize}
     \item im \textbf{Entwurf} werden Klassen und Dateien eines zu entwerfenden Systems \textbf{geplant}
     \item dabei beruht der Entwurf auf den \textbf{Anforderungen}, den \textbf{Ergebnissen der Analyse} und der \textbf{Architektur}
-    \item die Klassen des Entwurfs entsprechen den Klassen der verwendeten OO Sprache
-    \item die Struktur der Klassen wird mit UML-Klassendiagrammen definiert
-    \item Abläufe und das Zusammenspiel von Klassen wird mit UML-Sequenzdiagrammen modelliert
-    \item der Entwurf sollte sinnvollerweise schrittweise entwickelt werden
+    \item die Klassen des Entwurfs entsprechen den Klassen der verwendeten objektorientierten Sprache
+    \item die \textbf{Struktur der Klassen} wird mit \textbf{UML-Klassendiagrammen} definiert
+    \item \textbf{Abläufe} und das \textbf{Zusammenspiel} von Klassen wird mit \textbf{UML-Sequenzdiagrammen} modelliert
+    \item der Entwurf sollte sinnvollerweise \textbf{schrittweise} (\texit{iterativ}) entwickelt werden
     \item hierbei helfen grundlegende Prinzipien wie ``\textit{Reise mit leichtem Gepäck}``
-    \item Entwurfsmuster wie Beobachter, MVC und Fassade sind hierbei wichtige Hilfsmittel beim Entwurf
-    \item anhand von Prinzipien guten Entwurfs kann die Qualität eines Entwurfs beurteilt werden
-    \item das wichtigste Prinzip hierbei ist die Aufteilung der Gesamtaufgabe in kleine Teile, wobei die Teile lose untereinander gekoppelt sein sollen, was durch eine hohe Kohäsion (\textit{Zusammenhalt}) sowie Vermeidung starker Kopplung (Globale Variablen, lange formale Parameterlisten in den Methoden-Signaturen usw.) erreicht werden kann, außerdem durch die Beachtung guten Entwurfs wie Vermeidung zirkuläre Abhängigkeiten
-    \item die Qualität eines Entwurfs kann verbessert werden, indem der Code durch Refactorings verbessert wird
+    \item Entwurfsmuster wie \textbf{Beobachter}, \textbf{MVC} und \textbf{Fassade} sind wichtige Hilfsmittel beim Entwurf
+    \item anhand von \textbf{Prinzipien guten Entwurfs} kann die \textbf{Qualität eines Entwurfs} beurteilt werden
+    \item das wichtigste Prinzip hierbei ist die Aufteilung der Gesamtaufgabe in \textbf{kleine Teile}, wobei die Teile lose untereinander gekoppelt sein sollen, was durch eine \textbf{hohe Kohäsion} (\textit{Zusammenhalt}) sowie \textbf{Vermeidung starker Kopplung} (Globale Variablen, lange formale Parameterlisten in den Methoden-Signaturen usw.) erreicht werden kann, außerdem durch die Beachtung guten Entwurfs wie Vermeidung zirkulärer Abhängigkeiten
+    \item die Qualität eines Entwurfs bleibt gut, indem der Code durch \textbf{Refactorings} stetig verbessert wird
 \end{itemize}
