docs: updated layered architecture with quote from Buschmann

--- a/docs/repetitorium/part two/Architektur/architekturmuster.tex
+++ b/docs/repetitorium/part two/Architektur/architekturmuster.tex
@@ -50,6 +50,10 @@ Webanwendungen.
 
 \subsection{Mehrschichtenmodell}
 
+\blockquote[{\cite[31, Hervorhebung i.O.]{BMRS96}}]{
+    The \textit{Layers} architectural pattern helps to structure applications that can be decomposed into groups of subtasks in which each group of subtasks is at a particular level of abstraction.
+}
+
 \subsubsection*{Problem}
 \begin{itemize}
     \item Anwendung besteht aus vielen Teilen, die unterschiedliche Verantwortlichkeiten besitzen
