docs: update refactoring method with 2 intermediate steps

--- a/docs/repetitorium/part two/Objektorientierter Entwurf/verbesserung des entwurfs durch refactoring.tex
+++ b/docs/repetitorium/part two/Objektorientierter Entwurf/verbesserung des entwurfs durch refactoring.tex
@@ -14,6 +14,8 @@ Refactoring besteht aus mehreren Schritten:
 
 \begin{enumerate}
     \item Problematische Stellen identifizieren (sog. \textit{Code Smells})
+    \item geeignete Refactorings ermitteln
+    \item Testüberdeckung überprüfen, um bleibende Funktionalität zu gewährleisten
     \item Refactorings anwenden, um die problematischen Stellen zu verbessern (\textit{Martin}: ``\textit{Heuristics}`` (vgl.~\cite[285 ff.]{Mar08}))
     \item Tests ausführen, um sicherzustellen, dass das Refactoring nicht die Funktionalität geändert hat
 \end{enumerate}
