docs: add remarks to Lernförderlichkeit

--- a/docs/repetitorium/literatur.bib
+++ b/docs/repetitorium/literatur.bib
@@ -394,3 +394,16 @@ and Rundshagen, Michael",
     publisher = {Wiley Publishing},
     abstract = {Pattern-Oriented Software Architecture: A System of Patterns looks at how patterns occur on three different levels--in software architecture, in everyday design, and in idioms (which describe how a particular design pattern is implemented in a programming language like C++). This synthetic approach is a little theoretical at times, but the authors also present over a dozen patterns and provide real-world examples wherever possible. For architectural patterns, the authors look at the Layers pattern, used in operating systems such as Windows NT and virtual machines. They also consider Pipes and Filters, which process streams of data. (This pattern, the authors point out, is a lynchpin of Unix.) Their Blackboard pattern shows how a complex problem, such as image or speech recognition can be broken up into smaller, specialized subsystems that work together to solve a problem. (For recognizing words from a raw waveform input, a Blackboard approach might have separate processes to find phonemes, then words, then sentences.) This book also looks at today's distributed systems in considering the Broker pattern, which is used on the Internet and in Microsoft's OLE technology. This section also presents several powerful patterns for building effective graphical user interfaces, such as Model-View-Controller. The authors define several well-known design patterns, such as the Proxy and Command patterns, and also basic, far-reaching patterns, such as Whole-Part and Master-Slave, which are widely used throughout computing. Their survey ends with a discussion on the way objects can communicate (using such patterns as Forwarder-Receiver, Client-Dispatcher-Server, and Publisher-Subscriber), which many developers will recognize as familiar patterns, but are codified here as "official" patterns. The book then discusses some idioms in C++ and a more far-reaching role for patterns in software design and architecture. By fitting patterns into traditional software engineering practices, the authors of Pattern-Oriented Software Architecture successfully argue that the role for patterns will only continue to diversify and enrich tomorrow's software engineering tools and methodologies. --Richard Dragan}
 }
+
+@Inbook{Rau07f,
+    title="Gestaltung der Mensch-Computer-Interaktion",
+    bookTitle="Objektorientierte Systementwicklung: Vom Gesch{\"a}ftsprozess zum Java-Programm",
+    year="2007",
+    publisher="Vieweg",
+    address="Wiesbaden",
+    pages="137--161",
+    abstract="Anhand eines Mehrschichten-Modells werden unterschiedliche Entscheidungen bei der Gestaltung der Benutzungsschnittstelle in strukturierter Weise vorgestellt. Nach diesem generellen {\"U}berblick werden die arbeitswissenschaftlichen Grunds{\"a}tze der Dialogschnittstelle nach DIN EN ISO 9241-10 anhand von Beispielen erl{\"a}utert. Auf dieser Basis erfolgt eine Charakterisierung einzelner Elemente der Dialoggestaltung. Beispiele sind Fenster, Men{\"u}s, Textfelder, Schaltfl{\"a}chen usw. Dabei werden die Elemente nicht nur unter funktionalen Gesichtspunkten vorgestellt, sondern praktische Gestaltungsregeln diskutiert und an Beispielen verdeutlicht. Zum Abschluss werden Vorgehensschritte bei der Entwicklung der Dialog-Schnittstelle besprochen und auf ein Fallbeispiel angewandt. Im Schwerpunkt erfolgt die Darstellung aus Benutzersicht und weniger aus Software-technischer Sicht.",
+    isbn="978-3-8348-9174-7",
+    doi="10.1007/978-3-8348-9174-7_5",
+    url="https://doi.org/10.1007/978-3-8348-9174-7_5"
+}
