--- a/docs/repetitorium/part two/Objektorientierte Analyse/dialogentwurf.tex
+++ b/docs/repetitorium/part two/Objektorientierte Analyse/dialogentwurf.tex
@@ -128,7 +128,10 @@ Für die Gestaltung von Benutzeroberflächen ist insb. Teil 110 \textit{Grundsä
     \item \textbf{Erwartungskonformität}: Ein Dialog ist erwartungskonform, wenn er konsistent ist und den Merkmalen des Benutzers entspricht (Kenntnisse Arbeitsgebiet, Ausbildung, Erfahrung, allgemein anerkannte Konventionen, bspw. einheitliche Verwendung von Funktionscodes und Funktionstasten in allen Dialogen).
     \item \textbf{Fehlertoleranz}: Das beabsichtigte Arbeitsergebnis wird trotz erkennbar fehlerhafter Eingaben mit keinem oder \textbf{minimalen Korrekturaufwand} seitens des Benutzers erreicht.
     \item \textbf{Individualisierbarkeit}: Das Dialogsystem erlaubt Anpassungen an Erfordernisse der Arbeitsaufgabe sowie individuelle Fähigkeiten und Vorlieben des Benutzers.
-    \item \textbf{Lernförderlichkeit}: Der Benutzer wird beim Erlernen des Dialogs unterstützt und angeleitet.
+    \item \textbf{Lernförderlichkeit}: Der Benutzer wird beim Erlernen des Dialogs unterstützt und angeleitet (bspw. über ``Shortcuts`` bzw. \textit{Mnemonics}\footnote{
+        s. \url{https://en.wikipedia.org/wiki/Mnemonics_(keyboard)}, abgerufen 26.04.2024
+    } (vgl.~\cite[147]{Rau07f})).
+
 \end{itemize}
 
 \subsubsection*{Barrierefreiheit}
