docs: wording updates

--- a/docs/tests/einsendeaufgaben2/literatur.bib
+++ b/docs/tests/einsendeaufgaben2/literatur.bib
@@ -250,6 +250,7 @@ and Rundshagen, Michael",
 }
 
 @Inbook{Rau07f,
+    author = {Rau, Karl-Heinz},
     title="Gestaltung der Mensch-Computer-Interaktion",
     bookTitle="Objektorientierte Systementwicklung: Vom Gesch{\"a}ftsprozess zum Java-Programm",
     year="2007",
