--- a/docs/tests/einsendeaufgaben2/literatur.bib
+++ b/docs/tests/einsendeaufgaben2/literatur.bib
@@ -291,3 +291,32 @@ and Rundshagen, Michael",
     year={2003},
     publisher={Addison-Wesley}
 }
+
+@article{Par72,
+    author = {Parnas, D. L.},
+    title = {On the criteria to be used in decomposing systems into modules},
+    year = {1972},
+    issue_date = {Dec. 1972},
+    publisher = {Association for Computing Machinery},
+    address = {New York, NY, USA},
+    volume = {15},
+    number = {12},
+    issn = {0001-0782},
+    url = {https://doi.org/10.1145/361598.361623},
+    doi = {10.1145/361598.361623},
+    abstract = {This paper discusses modularization as a mechanism for improving the flexibility and comprehensibility of a system while allowing the shortening of its development time. The effectiveness of a “modularization” is dependent upon the criteria used in dividing the system into modules. A system design problem is presented and both a conventional and unconventional decomposition are described. It is shown that the unconventional decompositions have distinct advantages for the goals outlined. The criteria used in arriving at the decompositions are discussed. The unconventional decomposition, if implemented with the conventional assumption that a module consists of one or more subroutines, will be less efficient in most cases. An alternative approach to implementation which does not have this effect is sketched.},
+    journal = {Commun. ACM},
+    month = {dec},
+    pages = {1053–1058},
+    numpages = {6},
+    keywords = {KWIC index, modularity, modules, software, software design, software engineering}
+}
+
+@book{Fow99,
+    title = {Refactoring: improving the design of existing code},
+    year = {1999},
+    isbn = {0201485672},
+    publisher = {Addison-Wesley Longman Publishing Co., Inc.},
+    address = {USA},
+    abstract = {As the application of object technology--particularly the Java programming language--has become commonplace, a new problem has emerged to confront the software development community. Significant numbers of poorly designed programs have been created by less-experienced developers, resulting in applications that are inefficient and hard to maintain and extend. Increasingly, software system professionals are discovering just how difficult it is to work with these inherited, "non-optimal" applications. For several years, expert-level object programmers have employed a growing collection of techniques to improve the structural integrity and performance of such existing software programs. Referred to as "refactoring," these practices have remained in the domain of experts because no attempt has been made to transcribe the lore into a form that all developers could use. . .until now. In Refactoring: Improving the Design of Existing Code, renowned object technology mentor Martin Fowler breaks new ground, demystifying these master practices and demonstrating how software practitioners can realize the significant benefits of this new process.With proper training a skilled system designer can take a bad design and rework it into well-designed, robust code. In this book, Martin Fowler shows you where opportunities for refactoring typically can be found, and how to go about reworking a bad design into a good one. Each refactoring step is simple--seemingly too simple to be worth doing. Refactoring may involve moving a field from one class to another, or pulling some code out of a method to turn it into its own method, or even pushing some code up or down a hierarchy. While these individual steps may seem elementary, the cumulative effect of such small changes can radically improve the design. Refactoring is a proven way to prevent software decay.In addition to discussing the various techniques of refactoring, the author provides a detailed catalog of more than seventy proven refactorings with helpful pointers that teach you when to apply them; step-by-step instructions for applying each refactoring; and an example illustrating how the refactoring works. The illustrative examples are written in Java, but the ideas are applicable to any object-oriented programming language. 0201485672B04062001}
+}
