docs: add Architecture Influence Cycle figure

--- a/docs/repetitorium/part two/Architektur/softwarearchitektur.tex
+++ b/docs/repetitorium/part two/Architektur/softwarearchitektur.tex
@@ -18,9 +18,17 @@ Dabei beantwortet eine Softwarearchitektur typische Fragen wie
 \subsection*{Architektur am Anfang}
 Die Beantwortung dieser Fragen hat entscheidende Auswirkungen auf die weitere Entwicklung der Software, deshalb sollten Softwarearchitekten bereits beteiligt sein, wenn es um die Klärung der \textbf{Geschäftsanforderungen} geht (s.a. Abschnitt~\ref{sec:lastenheft-vision-scope}).\\
 
+\begin{figure}
+    \centering
+    \includegraphics[scale=0.4]{part two/Architektur/img/aic}
+    \caption{Der \textit{Architecture Influence Cycle} nach \textit{Bass, Clements, und Kazman}. Qualitäts-, Geschäfts- und organisatorische Anforderungen beeinflussen die Arbeit des Architekten, die wiederum diese Anforderungen beeinflussen können. Zusätzlich wirken eigene Erfahrungen auf seine Planung ein, die wiederum in ein Folgeprojekt einfließen können. (Quelle: in Anlehnung an~\cite[58, Figure 3.5]{BCK12})}
+    \label{fig:aic}
+\end{figure}
+
+
 \noindent
 Dabei liefern Architekten \textbf{Aufwandsabschätzungen}, die die Wirtschaftlichkeit beeinflussen können, und überprüfen die Machbarkeit von Ideen.\\
-Hierbei entsteht eine Rückkoppelungsschleife, da Ideen zum Produkt zu Fragen und Aussagen zur Softwarearchitektur führen, die wiederum die Ideen zum Produkt beeinflussen (vgl.\cite[37]{Wed09b}).
+Hierbei entsteht eine Rückkoppelungsschleife, da Ideen zum Produkt zu Fragen und Aussagen zur Softwarearchitektur führen, die wiederum die Ideen zum Produkt beeinflussen (vgl.\cite[37]{Wed09b}, s. außerdem Abbildung~\ref{fig:aic}).
 
 \subsection*{Grundlage: Anforderungen und Randbedingungen}
 Grundlage für die Auswahl einer Softwarearchitektur sind die \textbf{Anforderungen} und \textbf{Randbedingungen}.
