docs: update wording and bib refs

--- a/docs/repetitorium/literatur.bib
+++ b/docs/repetitorium/literatur.bib
@@ -407,3 +407,22 @@ and Rundshagen, Michael",
     doi="10.1007/978-3-8348-9174-7_5",
     url="https://doi.org/10.1007/978-3-8348-9174-7_5"
 }
+
+@book{Mye75,
+    author = {Myers, Glenford J},
+    title = {Reliable software through composite design},
+    year = {1975},
+    isbn = {0884052842},
+    publisher = {Petrocelli/Charter}
+}
+
+@standard{UML17,
+    author = {OMG},
+    institution = {Object Management Group},
+    keywords = {UML},
+    month = {August},
+    organization = {Object Management Group},
+    title = {{OMG Unified Modeling Language (OMG UML), Version 2.5.1}},
+    url = {http://www.omg.org/spec/UML/2.5.1},
+    year = 2017
+}
