--- a/docs/repetitorium/part two/Objektorientierter Entwurf/prinzipien guten entwurfs.tex
+++ b/docs/repetitorium/part two/Objektorientierter Entwurf/prinzipien guten entwurfs.tex
@@ -133,7 +133,9 @@ Der Zusammenhalt wird in der Reihenfolge schwächer (s. Abbildung~\ref{fig:zusam
 Dennoch müssen Kopplungen möglichst schwach sein, da die Teile der Software unabhängig voneinander sein sollen.
 
 \subsubsection*{Typen von Kopplungen}
-Im Software Engineering wird die Kopplung von Teilen nach Typen klassifiziert, wobei die Stärke der Kopplung unterschiedlich bewertet wird (s. Abbildung~\ref{fig:kopplung}).
+Im Software Engineering wird die Kopplung von Teilen nach Typen klassifiziert, wobei die Stärke der Kopplung unterschiedlich bewertet wird\footnote{
+\cite[33 ff.]{Mye75}
+} (s. Abbildung~\ref{fig:kopplung}).
 
 \noindent
 Mit absteigender Reihenfolge nimmt auch die Stärke der Kopplung in folgender Liste ab:
