chore(docs): update bib refs and indexes

--- a/docs/repetitorium/literatur.bib
+++ b/docs/repetitorium/literatur.bib
@@ -25,6 +25,13 @@
     publisher = {Trier University of Applied Sciences},
 }
 
+@book{Buh09,
+    author = {Buhl, Axel},
+    title = {Systemmodellierung},
+    year = {2009},
+    publisher = {Trier University of Applied Sciences},
+}
+
 @book{Wed09b,
     author = {Wedemann, Gero},
     title = {Objektorientierte Analyse und Entwurf},
