chore(docs): minor formatting updates

--- a/docs/repetitorium/part three/Einführung/einsatzziele von uml 2.0 modellen in der softwareentwicklung.tex
+++ b/docs/repetitorium/part three/Einführung/einsatzziele von uml 2.0 modellen in der softwareentwicklung.tex
@@ -28,5 +28,5 @@ Man spricht in diesem Zusammenhang von der \textbf{modellgetriebenen Softwareent
 \begin{itemize}
     \item \textbf{MDSD}: betrachtet den Einsatz von Modellen im Entwicklungsprozess, gibt Hinweise auf Prozessaktivitäten und (bewährte) Einsatzpraktiken für Modelle
     \item \textbf{MDA}: Grundgedanke: Geschäftsprozesse sind stabiler als {techn.} Plattformen, gleiche Geschäftsprozesse müssen auf unterschiedlichen Plattformen verteilt werden.\\
-    \rightarrow verschiedene Modellierungsebenen: Geschäftslogik wird plattformunabhängig modelliert, Transformation auf ein plattformabhängiges Modell (bzw. Codegenerierung aus plattformabhängigen Modell) erfolgt automatisch
+    $\rightarrow$ verschiedene Modellierungsebenen: Geschäftslogik wird plattformunabhängig modelliert, Transformation auf ein plattformabhängiges Modell (bzw. Codegenerierung aus plattformabhängigen Modell) erfolgt automatisch
 \end{itemize}
