chore(docs): update index and metadata

--- a/docs/repetitorium/part one/Prozessmodelle/iterativ.tex
+++ b/docs/repetitorium/part one/Prozessmodelle/iterativ.tex
@@ -1,5 +1,5 @@
 
-\subsection{Iterativ}
+\subsection{Iterativ}\label{subsec:iterativ}
 
 Das Modell wird auch \textbf{Sprialmodell}\footnote{
     s.a. \url{https://de.wikipedia.org/wiki/Spiralmodell}, abgerufen 27.03.2024
