--- a/docs/repetitorium/part three/Einführung/index.tex
+++ b/docs/repetitorium/part three/Einführung/index.tex
@@ -4,6 +4,9 @@
 \input{part three/Einführung/lernziele}
 \input{part three/Einführung/einsatzziele von uml 2.0 modellen in der softwareentwicklung}
 \input{part three/Einführung/sprachaufbau der uml 2.0}
+\input{part three/Einführung/diagrammübersicht}
+\input{part three/Einführung/uml modelle im entwicklungsprozess}
+\input{part three/Einführung/zusammenfassung}
 
 \newpage
 
