docs: add figure for metamodel hierarchy

--- a/docs/repetitorium/part three/Einführung/sprachaufbau der uml 2.0.tex
+++ b/docs/repetitorium/part three/Einführung/sprachaufbau der uml 2.0.tex
@@ -67,7 +67,7 @@ Das UML \textbf{Metamodell} wird auf Basis des Metamodells der \textit{MOF}\foot
 } definiert.\\
 In der MOF werden grundlegende Konzepte definiert, die wiederum in der UML für die Definition der Modellierungskonzepte benötigt werden\footnote{
 ``[\ldots] ein kleiner Begriffsraum [wird] genutzt, um einen größeren zu erklären`` (\cite[5]{Buh09})
-}.
+} (s. Abbildung~\ref{fig:metamodel}).
 
 \begin{enumerate}
     \item Die \textbf{Metaebene} der MOF wird mit M3 bezeichnet.
@@ -83,3 +83,11 @@ Die Erklärung der Konzepte basiert auf einer abstrakten Syntax, zu deren Beschr
 Regeln zur syntaktischen Korrektheit werden mittels der \textbf{OCL} beschrieben.
 Die Bedeutung der Modellierungskonzepte wird textlich beschrieben.\\
 Darüber hinaus werden die in der UML Superstructure erläuterten Modellierungskonzepte in Paketen zusammengefasst.
+
+
+\begin{figure}
+    \centering
+    \includegraphics[scale=0.4]{part three/Einführung/img/metamodel}
+    \caption{Beispiel für die verschiedenen Schichten der Metamodell Hierarchie. (Quelle: in Anlehnung an S. 20, Figure 7.8, \url{https://www.omg.org/spec/UML/2.4.1/Infrastructure/PDF}, abgerufen 01.05.2024}
+    \label{fig:metamodel}
+\end{figure}
